@@ -1,24 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST Search-Xapian-1.2.10.0.tar.gz 62269 SHA256 9695b45b978ef41b367fc5ea2bcf5ecbc2b4c5aff6d138d7dbc31946fdb86bc7 SHA512 86b7e53d952605aa604a923e1970ac19ba5873139c4b9cb89619cf88374d18b1ed611ad210fe8e98ecc6a187e88a76343e48e25a6bbbbb9e912857c524e02e0b WHIRLPOOL f2dd1cc61efd0d33fbb414dbeb1b668b8962dd505b01a71970521695a9f404191addc47bf5e41be1b63d645fcff81b6c28aa3ecd1674d709dfbcbc17a0d2d945
 DIST Search-Xapian-1.2.12.0.tar.gz 62289 SHA256 9bc0cb0b8d41f7160c29c9d774e16293178c44780f1a186767b088089d13fcaa SHA512 79e080613e10960fee5c9ab9c2db06876a8623a5f173cdd417b837d4bc296fe7dfbd75444833d164ef854510fa47f32cd78743a6e4f4c985bccdabf31405452c WHIRLPOOL 595eb97a58819a5c80b8ddf8f7a6549b5dcdf013d396ca681ff4e81944c4f0b1ec7d266fe232839fb39bfd4d2adbf99b7d6df5781ca2dd30a8ddcb454ea702ee
-DIST Search-Xapian-1.2.8.0.tar.gz 61945 SHA256 73b4b1bb8cbba850cf7337cc7aa0fd7c9bdf2827293591d793693a4e07f27f90 SHA512 bc34d41aca3c7541f273d64ec47b19d150c92d00c906fd6ee8ddc2031bf8928d3bde50f0429377c8e429faa44b9db623f032a9e30f9b61814e27896e752c0b42 WHIRLPOOL 09e1211d257cb1018fd27bb7cf8d05ae942bad29242730003fdfcb671072f32915522a4bea812b041d5e7664e447b47523dda548905735872193fe372c61cac1
-DIST Search-Xapian-1.2.9.0.tar.gz 62103 SHA256 9d608cd4afabe24323cffa1a96526fd0adcd99a5ed7c07a6845abcdb854f9485 SHA512 559f89810198d49b1641aba76e01fdf173f695810dcd2204e41b45c3b2d336e16068435bfddbaa9b5dba17f9e67ed340ac8fc807256c86881ef72def8cc7bae9 WHIRLPOOL 215290f7479742349ca75274c0e68b30f891bf1c2b4bdf55e402904ea51d562155c0d7c331b3ce24bbb82aa5a1f17a3ba6e2eedd7d2fd6a1fb27c1bbe6f607c2
-EBUILD Search-Xapian-1.2.10.0.ebuild 751 SHA256 9b2fe2500e4a49beb7b3c344355a7f04c89b3619fbf876daf8cb1088fb8f904c SHA512 90e6c9e0026c41a686587d0dbe26877ba5d3b8ed07fed26011c3322ea544827a7f2bd1c4db71dc20b3de9bc438d49061e7f6e16572e01fbd371f2cfb56d551bc WHIRLPOOL 41a4c7f6f3d0d370f68128d97b1fe7ce430674bde13e3f92f7791d699afbc3b876d0db594c4274df824e728103b4a2ef630f65a7e65c819d9ded2e6ad80c434a
 EBUILD Search-Xapian-1.2.12.0.ebuild 886 SHA256 ac3bd6c6394152ec294adf56a46c958dd6443a3f61920f2b35bfd8b721737228 SHA512 af448ad66974a3ea0530385c295d5b2e542fb3e0de3a44b52fb4aad43fa05d8ea510f91936082267436c233a8c40cba2ba784271761bbe71512f569dc4c7d5a3 WHIRLPOOL 590b802dc33238cd00504878ccd09581fe29a4ba8ce1a59855d0fe644b60e7c1115adc6fbd75e7669efb1d116b6f701745bfca26cfcd26280343b38cc29c8486
-EBUILD Search-Xapian-1.2.8.ebuild 769 SHA256 e45affe0c2284cb954821823019201d56fe5123cb0ef6d8363ebcd77c38fe62b SHA512 ef5a805807de1cf5b8298201b343810311a8f68f68586dc10c5d61bc31edfb1ed7bc7f9cf7f759b129444444b4801532c04c7af603833aa376a5ae2b5f04ba22 WHIRLPOOL 8afc9e896de63517aa8baa2fbe64fc0cc4ad1ac2e2cf70351a13efbeb6cc7acc3164ef392aef0494b43f5f0988a03186e5f60c3e19ef98e5cedaccd88436e3e1
-EBUILD Search-Xapian-1.2.9.ebuild 771 SHA256 cba34e4f0000fbfaeb1865c7a8105a44c761f011b987828ae5e79cfd5447d0dc SHA512 506088ce8d05ed79e09304a35b67ea3eb0c6dd59b4c9d2b41863e5c9e4baad332a4539a0a3905e0233cbc85cb502bfc513dcc146d433c1e6e2c27796aed4f96c WHIRLPOOL 5e7c6b4df3ad581e698fac3f4cb5c830939926d190e11c70982529531273943e6755ec2d20674fa4a515e5442e121aba13ec2eee7bd042f3dfb892ea2ce994bc
-MISC ChangeLog 2645 SHA256 7c2b90fa77513020e21ef260cf5e74641424a5658e359928f883b8cd18056a38 SHA512 eab10bac3619d05aa7e65fcd32dfd9f71081f9e40bdc7dad6af3f0162f1db8d534ba1500d7c8e8eaf276dba70e13674a11fa672935aab839e8f0c7e0ac7c3dc4 WHIRLPOOL b91d2e085e4391f1fc12c10a7fa426c0d1a8883afcf1636f15fd7b962658502e034ab49bd2e26e56418d7cb4b3df46738dd69bc8d0d2f5147c74983bbd22963d
+MISC ChangeLog 2823 SHA256 6cbeb6b526e2de18ee29fde4b5237aebeeb9a2448b782c1b8a6ffb00639e1014 SHA512 e304d89a82ccd18fcaff1c63392fa25d81c7d99ebc63f75dfcd744688f2f9768b54ab3fc9d4d2558bc918bf0e373070a571a25d6019b773c01b51336344f9f58 WHIRLPOOL f3b75e331b4dedfc54c66eae0f5810aae9b13b66dc08dddca093a8fe9ef194ba286311af98418e8c6f59e6ed9b4ab7c1115eb881f56e1eaa8442429c5c0ce982
 MISC metadata.xml 4012 SHA256 ae90211e6d211f8999619bbbd4448475469bc3972f8c9fff5233f5f67ae585a1 SHA512 80bdaacb65c220666597014f6b90e720a4542590c4f704b7dc36bab04af7b7e977eed3e70f0d007626a206d60251f79a2feada280483a3c2fd0e94bdd90e1561 WHIRLPOOL 6245403dba91bc74628f5e442d416206808843c9ca44bcab5297f36b2d2fba440861afac1c334f1b7671787bde2877deb3cde028ec7785a8f487bb905f738254
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQWZMnAAoJEO+t9ga+3I3acgkH/2Mrkh8Agook0Nwak/qIFocs
-qEr+cCqZznilQ0kfrqS/z5wNiE8H35tFiM9abehBK6ShYKowU5DDkQEyvgyPBULC
-g3/i38kN+OrVvDA/hwNNDWdAfCdMmfQ8Tu8a4iruLePPMzcOE4Ru2Fz+yUWN9DmJ
-InLn2N2Lrx6XR4qm8hFLFJX5mRg3LMTAzAraWsnLjA385Ey2lxrNOyhZXhBaqPYI
-PNus131BvI36EqAyYhk4O3xk8NvzZVrtAInltJm+QeWfwrG7c8Afx3hlTSorAikM
-aWCirzPvpcq4dFKjKoTMjfmZwmna2nga02+ooZQGUsqYByyfvexxZYyro3sWRCc=
-=L9NE
+iEYEAREIAAYFAlBrb1oACgkQl5yvQNBFVTUfyQCgiEfbPDP/Zsv+8VGQh96fpFDQ
+J3MAoJqNEoRfi2mxd4JCxRHrOWR5AvfF
+=V5dY
 -----END PGP SIGNATURE-----
