@@ -1,33 +1,0 @@
-# Copyright 1999-2012 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Search-Xapian/Search-Xapian-1.2.10.0.ebuild,v 1.1 2012/05/10 14:17:32 blueness Exp $
-
-EAPI="3"
-
-MODULE_AUTHOR=OLLY
-inherit perl-module toolchain-funcs
-
-DESCRIPTION="Perl XS frontend to the Xapian C++ search library."
-
-LICENSE="|| ( Artistic GPL-1 GPL-2 GPL-3 )"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE="examples"
-
-RDEPEND=">=dev-libs/xapian-1.2.9
-	!dev-libs/xapian-bindings[perl]"
-DEPEND="${RDEPEND}
-	virtual/perl-Module-Build"
-
-SRC_TEST="do"
-
-myconf="CXX=$(tc-getCXX) CXXFLAGS=${CXXFLAGS}"
-
-src_install() {
-	perl-module_src_install
-
-	use examples && {
-		docinto examples
-		dodoc "${S}"/examples/*
-	}
-}
