@@ -1,6 +1,6 @@
 DIST XML-Mini-1.2.8.tar.gz 35349 SHA256 9e66e218796c503da2fe47b0670581880121427860faa58a7d2c704ad02ccf51 SHA512 3872bcf0198dcbe9173c1b50fa4bdc324edc6b99de140bbf1bdd85db0a5080e7e260d9bb6fb46a1fe21a76bfb57d886f1cac9443fd76c1daf99d9e6e95ca7dc8 WHIRLPOOL b2a4e1c424e2d59386251100a57eda79d9cbb65f67f960555c4d3e99b58962292534901fdad11137f50a6abbe0783ff931eb133a514709a9d8bae469684f6899
 DIST XML-Mini-1.38.tar.gz 45214 SHA256 af803d38036a3184e124a682e5466f1bc107f48a89ef35b0c7647e11a073fe2d SHA512 875a1f63a31c8dae517856267686970283f389c1e1ea6714bf88d08e99e4b098ea2e7a301308a456d2f301bb8756f6a2f68a187d052984d3ea88dad87d372c2c WHIRLPOOL 8e3d5ddc9a4ce61b0c81dff2608964d944c74db06d92e9381c7b3f36a4f998e487c761cbe14ded1f3b1ea0dd7dca93b6b3665748ef4da6d8cca18bfa82a702e8
 EBUILD XML-Mini-1.2.8.ebuild 530 SHA256 eb49cfcbdcb48f32c7940eea36fe5057f840357fc9d23e333fa7f0df743476f6 SHA512 0e83cf0a250e19d5966249d42209dbdaa9a4328bbdb930f7213ae44770b9620f748cc3c4367569e0a4496abdea9838c43d6b13160ebbee82162cdac5afa4f3a2 WHIRLPOOL 367437ce9474b96115792096ae552986f79d8fea6d9f6071d51a66d7e28ffc18ae9946f4938b9fb98356addf184e214931d7cbaba50eceee9a685a7ed9389390
-EBUILD XML-Mini-1.380.0.ebuild 422 SHA256 cfedef9b65e6c60b995040fea71cfbee72e1309b8826b75426cdf419f83c45ca SHA512 a5b4c50111fa55229d6210f21656a53335d0c1f0e8421aa97af0c1614f3df988ebbdad6c8a3d9b835234acb4bd91969f7e1b20148b15da91073f77d2987760e7 WHIRLPOOL 5f59011bea6d49804ca9602ccb2e68407c01636f4fe37391b3c9be55d76afdb22c1253bd6866d8893059a076263d42e581737779cc83a77eaaf64b8b812ea54b
-MISC ChangeLog 1195 SHA256 331c270e61d9a183e1fcf9591055c6536ca8b42e23ed589116f687a944d16158 SHA512 0803bb332c4084b737d507781724970e56a053ec2f495c3449537a2e2c660c856f6f10af6426af96897f1f64ea9382ee61ca7d4078424a3cdd5dd78cf187e53e WHIRLPOOL 7fccdbd6f7aa31c740ef9b53368a4b7e12d95599cc3e9123a9085bd702515ae47574bb2add7e6214e644179b3cfb669d99b7ef50654bfb3c63a72166cf4f5fe8
+EBUILD XML-Mini-1.380.0.ebuild 420 SHA256 17c26a24bf698ea755e71f4161204249d6cc2e759a9bde5035019353b032b8a9 SHA512 91f64d1b6559e409d6f28c25f264afa76629a8c61d8dbe3a5e671a21efc74f85d7ce462c04419ed3dbefcb6b1d22b3346dafed7d49d9d3d0d333af5da11e7785 WHIRLPOOL bda33ad0cb42c717ba051d2337b5b4ba0f01fa8510da325fed4328d1e1e532122da3ebde1a2a052d3812f55719068c7ebfc75242c43b65ab9f1c31a80829a16c
+MISC ChangeLog 1306 SHA256 3d482c8146c4279086e182924d30746ede37e7055b4e4dd44bd5c32f9904908c SHA512 773ff18eacd9832963ef493ebf9eb10c8615890ae9c7eaadbd3e1e070285ca9f965de32c77c9518a709c6d955c15af6a21d7140be929fdd122c28d26baf3b8a4 WHIRLPOOL 74dc8dee86b1dee778e207b756bf40a9e43ea97e174fada1059f896a6cf60c815a52b36ccb10642bd11d9b0953bfd14f509239f5bea664ee5eb63f215e6ff8c7
 MISC metadata.xml 920 SHA256 4137ba685be541fc3842da8ec6f97ae42be078b8b9d48a0693bcf508ba395df3 SHA512 87c9b0b36e6d59f305dcc69531da719cf2ffeab0f75b6e16414d43cb06c3ccbbadd627156c074a8cfeeb9dfd0afd881257a6b4b6afa60f14d121397f21b29cb7 WHIRLPOOL 996bcb288422939ec38857ede4da39447f22a4244f0db9bb52a2b9db73da991a81527c522a88e5d13416261c26c72ae796fdf4dbeb1943e5bac036a1c593a019
