@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Mini/XML-Mini-1.380.0.ebuild,v 1.2 2011/09/03 21:04:45 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Mini/XML-Mini-1.380.0.ebuild,v 1.3 2012/10/03 11:45:36 ago Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ DESCRIPTION="pure perl API to create and parse XML"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="~amd64 sparc x86"
+KEYWORDS="amd64 sparc x86"
 IUSE=""
 
 SRC_TEST="do"
