@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/XML-Mini
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Mini/ChangeLog,v 1.9 2012/06/24 12:58:32 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-Mini/ChangeLog,v 1.10 2012/10/03 11:45:36 ago Exp $
+
+  03 Oct 2012; Agostino Sarubbo <ago@gentoo.org> XML-Mini-1.380.0.ebuild:
+  Stable for amd64, wrt bug #436872
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
