@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Search-Xapian
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Search-Xapian/ChangeLog,v 1.18 2012/09/19 09:40:41 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Search-Xapian/ChangeLog,v 1.19 2012/10/02 22:49:48 blueness Exp $
+
+  02 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  -Search-Xapian-1.2.10.0.ebuild, -Search-Xapian-1.2.8.ebuild,
+  -Search-Xapian-1.2.9.ebuild:
+  Remove older versions
 
   19 Sep 2012; Johannes Huber <johu@gentoo.org> Search-Xapian-1.2.12.0.ebuild:
   Stable for x86, wrt bug #434564
